<resources>
    <string name="app_name">Cluj Transport</string>
    <string name="search">Search</string>
    <string name="test">Test</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="route">Route</string>
    <string name="bus_station">Bus and Tram Stations</string>
    <string name="tickets">Tickets</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="routes_explained">This function will take the coordinates of the current position and the selected station, this will be used to coordinate the user to the station without getting lost or using an another map. This button will be removed later.</string>
    <string name="snagov">Snagov N - Road Unirii</string>
    <string name="snagov_n">Snagov N</string>
    <string name="road_unirii">Road Unirii</string>
    <string name="time_3">21:09 21:18</string>
    <string name="time_25">21:13 21:24</string>
    <string name="time_34">21:47 22:20</string>
    <string name="time_48">21:25 21:45</string>
    <string name="tickets_available">From this station you can buy tickets!</string>
    <string name="line_3">Line 3</string>
    <string name="show_map">Show on the map</string>
    <string-array name="stations_array">
        <item>Snagov N</item>
        <item>Snagov S</item>
        <item>Test</item>
    </string-array>
    <string name="weekdays">Weekdays</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="ticket_sms">SMS Tickets</string>
    <string name="ticket_counter">Ticket Counter</string>
    <string name="ticket_machine">Ticket Machine</string>
    <string name="sms_available">Send a SMS to the number 7479 for a ticket.\nThis offer is only valid in mobile networks Vodafone, Orange and Digi Mobil.</string>
    <string name="sms_line_num_title">[Line Number]</string>
    <string name="sms_line_num_price">0.5 Euro + VAT</string>
    <string name="sms_line_num_description">For a subscription for 45 minutes on a urban line of Cluj-Napoca, send a message with the line number to 7479 at a cost of this ticket is 0.5 Euro + VAT.</string>
    <string name="sms_t_title">T</string>
    <string name="sms_t_price">0.9 Euro + VAT</string>
    <string name="sms_t_description">For a subscription for 60 minutes on all urban lines of Cluj-Napoca, send a message with the letter T to 7479 at a cost of 0.9 Euro + VAT.</string>
    <string name="sms_a_title">A</string>
    <string name="sms_a_price">2.6 Euro + VAT</string>
    <string name="sms_a_description">For a subscription for 24 hours on all urban lines of Cluj-Napoca, send a message with the letter A to 7479 at a cost of 2.6 Euro + VAT.</string>
    <string name="sms_m_40_title">M40</string>
    <string name="sms_m_40_price">0.9 Euro + VAT</string>
    <string name="sms_m_40_description">For a subscription for 40 minutes on all metropolitan and urban lines of Cluj-Napoca, send a message with the text M40 to 7479 at a cost of 0.9 Euro + VAT.</string>
    <string name="sms_m_60_title">M60</string>
    <string name="sms_m_60_price">1.35 Euro + VAT</string>
    <string name="sms_m_60_description">For a subscription for 60 minutes on all metropolitan and urban lines of Cluj-Napoca, send a message with the text M60 to 7479 at a cost of 1.35 Euro + VAT.</string>
    <string name="sms_m_80_title">M80</string>
    <string name="sms_m_80_price">1.8 Euro + VAT</string>
    <string name="sms_m_80_description">For a subscription for 80 minutes on all metropolitan and urban lines of Cluj-Napoca, send a message with the text M80 to 7479 at a cost of 1.8 Euro + VAT.</string>
    <string name="sms_ma_title">MA</string>
    <string name="sms_ma_price">4 Euro + VAT</string>
    <string name="sms_ma_description">For a subscription for 24 hours on all metropolitan and urban lines of Cluj-Napoca, send a message with the text MA to 7479 at a cost of 4 Euro + VAT.</string>
    <string name="teatru">Teatru</string>
    <string name="road_piata_stefan_cel_mare">Road Piata Stefan cel Mare</string>
    <string name="station">Station</string>
    <string name="next_update">More info will be added in the future updates.</string>
    <string name="counter_ticket_for_two_trips">Ticket for 2 trips</string>
    <string name="counter_ticket_for_two_trips_price">4 RON</string>
    <string name="counter_ticket_for_two_trips_description">This ticket is bought from a counter and it is used for 2 trips on any line, the price is 4 RON/LEI.</string>
    <string name="machine_ticket_for_one_trip">Ticket for one trip</string>
    <string name="machine_ticket_for_one_trip_price">2 RON</string>
    <string name="machine_ticket_for_one_trip_description">This ticket is bought from a machine and it is used for one trip on any line, the price is 2 RON/LEI.</string>
    <string name="station_piata_mihai_viteazu_II">Piata Mihai Viteazu II</string>
    <string name="road_ion_popescu_voitesti">Road Ion Popescu Voitesti</string>
    <string name="scroll_right_and_left">Scroll to the right and left to see more lines.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add_stations">Add stations into the database here</string>
    <string name="road">Road</string>
    <string name="lon">Longitude</string>
    <string name="lat">Latitude</string>
    <string name="lines_database">Lines (Please leave space between two lines)</string>
    <string name="lines">Lines</string>
    <string name="save_info">Save the station into the database</string>
    <string name="see_database">You can see the database here</string>
    <string name="see_all_stations">See all the saved stations</string>
    <string name="delete_database">You can delete a station from the database here</string>
    <string name="delete_station">Remove station from database</string>
    <string name="station_search_delete">Search for a station to delete it</string>
    <string name="enter_password">Enter the password</string>
    <string name="password">Password</string>
    <string name="update_database">You can update a station from the database here</string>
    <string name="station_search_update">Search for a station to update it</string>
    <string name="show_station_info">Show station information</string>
    <string name="save_changes">Save the changes into the database</string>
    <string name="cancel">Cancel</string>
    <string name="station_settings">Station settings</string>
    <string name="line_settings">Line settings</string>
    <string name="add_lines">Add lines into the database here</string>
    <string name="line">Line</string>
    <string name="type">Type</string>
    <string name="type_database">Type (0 for bus, 1 for trolley bus, 2 for tram, 3 for minibus)</string>
    <string name="time">Time</string>
    <string name="time_database">Time - time format is hh:mm (Please leave space between two different times and \";\" between different schedules)</string>
    <string name="stations">Stations</string>
    <string name="stations_database">Stations (Please leave \";\" between two stations)</string>
    <string name="save_info_line">Save the line into the database</string>
    <string name="see_all_lines">See all the saved lines</string>
    <string name="delete_database_line">You can delete a line from the database here</string>
    <string name="delete_line">Remove line from database</string>
    <string name="line_search_delete">Search for a line to delete it</string>
    <string name="update_database_line">You can update a line from database here</string>
    <string name="line_search_update">Search for a line to update it</string>
    <string name="show_line_info">Show line information</string>
    <string name="tickets_database">Tickets (If available type \"true\", if not type \"false\")</string>
    <string name="sync">Sync</string>

</resources>