<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LineActivity">

    <Button
        android:id="@+id/button_line_back"
        android:layout_width="@dimen/button_dimen"
        android:layout_height="@dimen/button_dimen"
        android:background="@drawable/back_blue"/>

    <TextView
        android:id="@+id/text_line_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/line_3"
        android:textSize="40dp"
        android:textColor="@color/blue"
        android:layout_alignBottom="@+id/button_line_back"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/image_after_3_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bar_blue"
        android:layout_below="@id/text_line_title"
        android:layout_marginTop="@dimen/buttons_space"
        android:layout_marginBottom="@dimen/buttons_space"/>

    <Button
        android:id="@+id/button_line_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:text="@string/show_map"
        android:textSize="20dp"
        android:textColor="@color/blue"
        android:layout_below="@+id/image_after_3_title"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/image_after_line_3_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bar_blue"
        android:layout_below="@id/button_line_map"
        android:layout_marginTop="@dimen/buttons_space"
        android:layout_marginBottom="@dimen/buttons_space"/>

    <LinearLayout
        android:layout_below="@id/image_after_line_3_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/text_line_info_station">
        
        <TextView
            android:id="@+id/text_line_weekdays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weekdays"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/blue"
            android:onClick="onClick"
            android:clickable="true"/>
        
        <GridView
            android:id="@+id/grid_line_weekdays"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="5dp"
            android:numColumns="auto_fit"
            android:columnWidth="100dp"
            android:stretchMode="columnWidth"
            android:visibility="gone"
            android:gravity="center"/>

        <TextView
            android:id="@+id/text_line_saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/blue"
            android:onClick="onClick"
            android:clickable="true"/>

        <GridView
            android:id="@+id/grid_line_saturday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="5dp"
            android:numColumns="auto_fit"
            android:columnWidth="100dp"
            android:stretchMode="columnWidth"
            android:visibility="gone"
            android:gravity="center"/>

        <TextView
            android:id="@+id/text_line_sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/blue"
            android:onClick="onClick"
            android:clickable="true"/>

        <GridView
            android:id="@+id/grid_line_sunday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="5dp"
            android:numColumns="auto_fit"
            android:columnWidth="100dp"
            android:stretchMode="columnWidth"
            android:visibility="gone"
            android:gravity="center"/>
        
    </LinearLayout>

    <TextView
        android:id="@+id/text_line_info_station"
        android:layout_width="match_parent"
        android:text="@string/station"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
