<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_station_info"
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_blue"
    android:visibility="visible">

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_route_station"
            android:layout_width="@dimen/button_dimen"
            android:layout_height="@dimen/button_dimen"
            android:background="@drawable/route_blue"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/text_station_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_map"
            android:text="@string/snagov_n"
            android:textSize="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/text_station_road" />

        <TextView
            android:id="@+id/text_station_road"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/road_unirii"
            android:textSize="20dp"
            android:textColor="@color/blue"
            android:layout_below="@+id/text_station_name"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/button_route_station"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/image_after_station_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bar_blue"
        android:layout_below="@+id/layout_title"
        android:layout_alignParentStart="true" />

    <ListView
        android:id="@+id/list_bus_lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_below="@+id/image_after_station_name" />

    <RelativeLayout
        android:id="@+id/layout_tickets"
        android:layout_below="@id/list_bus_lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_after_station_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/buttons_space"
            android:layout_marginTop="@dimen/buttons_space"
            android:background="@drawable/bar_blue" />

        <Button
            android:id="@+id/button_station_tickets"
            android:layout_width="@dimen/button_dimen"
            android:layout_height="@dimen/button_dimen"
            android:layout_below="@id/image_after_station_info"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ticket_info_blue" />

        <TextView
            android:id="@+id/text_tickets_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_station_tickets"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/tickets_available"
            android:textSize="15dp" />

    </RelativeLayout>

</RelativeLayout>